--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "JSON-Comments",
-  "version": "1.0.0",
+  "name": "lyjson-comments",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "rollup src/index.js --format cjs --file dist/index.js; babel dist --out-dir dist",
-    "test": "node test/index.js"
+    "test": "yarn build; node test/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
     "@babel/plugin-transform-async-to-generator": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "rollup": "^0.67.4"
+    "rollup": "^0.68.1"
   },
   "homepage": "https://github.com/LingYanSi/JSON-Comments#readme"
 }
